fixed alignment and colors

--- a/src/routes/main.css
+++ b/src/routes/main.css
@@ -11,9 +11,15 @@ p {
   transform: translateY(15%);
 }
 
+.centered-main {
+  display: grid;
+  justify-content: center;
+  -ms-transform: translateY(10%);
+  transform: translateY(10%);
+}
+
 .width {
-  justify-content: left;
-  margin: auto;
+  text-align: left;
   max-width: 600px;
 }
 
@@ -31,17 +37,17 @@ p {
 #mainimage {
   justify-content: center;
   height: 250px;
-  min-width: 400px;
+  max-width: 600px;
 }
 
 /* Portfolio Links */
-#imgthumb {
+.imgthumb {
   height: 40px;
   width: 40px;
   margin: 0px 15px;
 }
 
-#imgrow {
+.imgrow {
   display: flex;
   justify-content: center;
 }
@@ -51,7 +57,6 @@ p {
     font-family: Helvetica;
     text-align: center;
     font-size: 2.5rem;
-    margin-right: 30px;
     color: #080305;
     letter-spacing: 3px;
   }
@@ -70,11 +75,13 @@ p {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
+  
   width: 100%;
 }
 
 .column {
   flex: 30%;
+  text-align: center;
   margin: 0px 3px;
 }
 
